--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
   },
   "homepage": "https://edwardfhsiao.github.io/react-codes-input",
   "scripts": {
-    "test": "NODE_ENV=test jest",
     "test:coverage": "npm run jslint && npm test -- --coverage",
     "test_single": "node_modules/.bin/jest index.js --coverage",
     "prepublish": "npm run test:coverage",
     "jslint": " ",
-    "babel": "BABEL_ENV=lib babel ./src/js/Inputs --out-dir ./lib/components",
+    "babel": "BABEL_ENV=lib babel ./src/js/Input --out-dir ./lib/components",
     "build": "rm -rf lib && npm run babel && npm run build_prod",
     "webpack_dev": "rm -rf dist && NODE_ENV=development ./node_modules/.bin/webpack --config ./webpack/development.config.js --progress --watch",
     "webpack_prod": "rm -rf dist && NODE_ENV=production ./node_modules/.bin/webpack --config ./webpack/production.config.js --progress -p",
@@ -47,13 +46,16 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-polyfill": "^6.7.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
@@ -70,6 +72,7 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
