--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-codes-input",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A react component for PIN, verify code and passcode entering.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/edwardfhsiao/react-codes-input.git"
+    "url": "git+https://github.com/edwardfxiao/react-codes-input.git"
   },
   "keywords": [
     "react",
@@ -19,9 +19,9 @@
   "author": "Edward Xiao",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/edwardfhsiao/react-codes-input/issues"
+    "url": "https://github.com/edwardfxiao/react-codes-input/issues"
   },
-  "homepage": "https://edwardfhsiao.github.io/react-codes-input",
+  "homepage": "https://edwardfxiao.github.io/react-codes-input",
   "scripts": {
     "test:coverage": "npm run jslint && npm test -- --coverage",
     "test_single": "node_modules/.bin/jest index.js --coverage",
