--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "url-loader": "^4.1.1",
