--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,7 +11,11 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/11728228?v=4",
       "profile": "https://github.com/edwardfxiao",
       "contributions": [
-        "code"
+        "code",
+        "doc",
+        "infra",
+        "test",
+        "review"
       ]
     }
   ],
